@@ -1,3 +1,8 @@
+2003-02-11  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>
+
+	PR optimization/9651
+	* rtlanal.c (may_trap_p): Handle FIX.
+
 2003-02-11  Dave Jones <davej@codemonkey.org.uk>
 
 	* config/i386/i386.c (override_options): Define c3-2 as a 686 with SSE.
